--- a/tests/data/custom-annotations/mergeable/annotations-ingress.yaml
+++ b/tests/data/custom-annotations/mergeable/annotations-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.org/mergeable-ingress-type: "master"
     custom.nginx.org/feature-a: "on"
     custom.nginx.org/feature-b: "512"
-    custom.nginx.org/test-split-feature: "  master.ip--master"
+    custom.nginx.org/test-split-feature: "  master.ip,master"
 spec:
   rules:
   - host: custom-annotations.example.com
