--- a/tests/data/custom-annotations/standard/annotations-ingress.yaml
+++ b/tests/data/custom-annotations/standard/annotations-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     custom.nginx.org/feature-a: "on"
     custom.nginx.org/feature-b: "512"
-    custom.nginx.org/test-split-feature: "  192.168.1.1  --some-ip"
+    custom.nginx.org/test-split-feature: "  192.168.1.1   ,some-ip"
   name: custom-annotations-ingress
 spec:
   rules:
